<resources>
    <string name="app_name">FotoKelly</string>
    <!-- Strings de activity_Drawer_Activity -->
    <string name="navigation_drawer_open">Open Navigation drawer</string>
    <string name="navigation_drawer_close">Close Navigation drawer</string>
    <!-- String de menu_lateral -->
    <string name="lateralBuscador">Buscador</string>
    <string name="lateralPerfil">Perfil</string>
    <string name="lateralFavorito">Mis favorito</string>
    <string name="lateralInmuebles">Mis inmuebles</string>
    <string name="lateralAnuncios">Mis anuncios</string>
    <string name="lateralAjustes">Ajustes</string>
    <!-- Strings de activity_login -->
    <string name="CorreoLogin">Correo</string>
    <string name="passLogin">Contraseña</string>
    <string name="buttonLogin">Login</string>
    <string name="buttonRegister">Registrarse</string>
    <string name="TextLoginRegister">¿Todavía no estas registrado?</string>
    <!-- Strings de activity_user_profile -->
    <string name="nombreCompletoProfile">Nombre completo:</string>
    <string name="CorreoProfile">Correo:</string>
    <string name="telefonosProfile">Telefono/os:</string>
    <string name="imgProfile">imgProfile</string>
    <string name="btnEditarFotoPerfil">Editar Foto</string>
    <string name="btnEditar">Editar</string>
    <string name="btnEliminarPerfil">Eliminar cuenta</string>
    <!-- Strings de activity_main_menu -->
    <string name="checkComprar">Comprar</string>
    <string name="checkAlquilar">Alquilar</string>
    <string name="Provincia">Provincia</string>
    <string name="localidad">Localidad</string>
    <string name="Calle">Calle</string>
    <string name="buscar">Buscar</string>
    <string name="imgpincipal">imgPincipal</string>
    <!-- Strings de activity_access_error -->
    <string name="textError">No puedes acceder a este apartado del área de usuario, por favor inicie sesion.</string>
    <string name="btnLoginError">Iniciar sesion</string>
    <!-- Strings de activity_register -->
    <string name="CorreoRegister">Correo:</string>
    <string name="PassRegister">Contraseña:</string>
    <string name="TelefonosRegister">Telefonos:</string>
    <string name="NombreRegister">Nombre Completo:</string>
    <string name="OpcionalTelRegister">(opcional)</string>
    <string name="AnotherPassRegister">introduce otra vez la contraseña:</string>
    <string name="btnRegister">Confirmar</string>
    <string name="introduceRegistro">Introduce:</string>
    <string name="asterisco">*</string>
    <!-- String URL -->
    <!-- <string name="baseURL">"https://ba6321fcc5c3.ngrok.io/Restful_Inmo/servicios/"</string> -->
    <!-- Strings de item_list_inmueble-->
    <string name="datosUbicacion">Datos de Ubicación</string>
    <string name="caracteristicasInmueble">Caracteristicas de inmueble</string>
    <string name="descripcionInmueble">Descripción</string>
    <string name="habitacionesInmueble">Nºhabitaciones:</string>
    <string name="banosInmueble">NºBaños:</string>
    <string name="edificacionInmueble">Tipo edificación:</string>
    <string name="obraInmueble">Tipo de obra:</string>
    <string name="equipamientoInmueble">Equipamiento:</string>
    <string name="exterioresInmueble">Exteriores:</string>
    <string name="garajeInmueble">Garaje:</string>
    <string name="trasteroInmueble">Trastero:</string>
    <string name="ascensorInmueble">Ascensor:</string>
    <string name="ultPlantaInmueble">Ultima planta:</string>
    <string name="mascotasInmueble">Mascotas:</string>
    <string name="DescripcionDefectoInmueble">No se ha ingresado Descripcion del inmueble.</string>
    <string name="btnOpcionesInmueble">Opciones</string>
    <!-- Strings de recycler_view_mis_inmuebles-->
    <string name="btnRegistrarInmueble">Registrar inmueble</string>
    <!-- String de activity_registrar_inmueble -->
    <string name="tituloRegistrarInmueble">Registrar Propiedad</string>
    <string name="provinciaRegistrarInmueble">Provincia</string>
    <string name="localidadRegistrarInmueble">Localidad</string>
    <string name="calleRegistrarInmueble">Calle</string>
    <string name="numeroRegistrarInmueble">Número</string>
    <string name="escaleraRegistrarInmueble">Escalera</string>
    <string name="pisoRegistrarInmueble">Piso</string>
    <string name="puertaRegistrarInmueble">Puerta</string>
    <string name="metros2RegistrarInmueble">Metros²</string>
    <string name="DescripcionTituloRegistrarInmueble">Una breve descripción del inmueble</string>
    <string name="DescripcionRegistrarInmueble">Descripción</string>
    <string name="numHabitacionesRegistrarInmueble">Número de habitaciones</string>
    <string name="numBanosRegistrarInmueble">Número de baños</string>
    <string name="tipoObraRegistrarInmueble">Tipo de obra</string>
    <string name="tipoEdificacionRegistrarInmueble">Tipo de edificación</string>
    <string name="equipamientoRegistrarInmueble">Equipamiento</string>
    <string name="exterioresRegistrarInmueble">Exteriores</string>
    <string name="garajeRegistrarInmueble">Garaje</string>
    <string name="trasteroRegistrarInmueble">Trastero</string>
    <string name="ascensorRegistrarInmueble">Ascensor</string>
    <string name="ultPlantaRegistrarInmueble">Ultima planta</string>
    <string name="mascotasRegistrarInmueble">Mascotas</string>
    <string name="introduceRegistrarInmueble">Introduce:</string>
    <string name="caracteristicasAdicionalesRegistrarInmueble">Caracteristicas adicionales</string>
    <string name="btnConfirmarRegistrarInmueble">Confirmar</string>
    <!-- String de activity_Anuncio_completo -->
    <string name="datosUbicacionAnuncioCompleto">Datos de Ubicación</string>
    <string name="caracteristicasInmuebleAnuncioCompleto">Caracteristicas de inmueble</string>
    <string name="descripcionInmuebleAnuncioCompleto">Descripción</string>
    <string name="habitacionesInmuebleAnuncioCompleto">Nºhabitaciones:</string>
    <string name="banosInmuebleAnuncioCompleto">NºBaños:</string>
    <string name="edificacionInmuebleAnuncioCompleto">Tipo edificación:</string>
    <string name="obraInmuebleAnuncioCompleto">Tipo de obra:</string>
    <string name="equipamientoInmuebleAnuncioCompleto">Equipamiento:</string>
    <string name="exterioresInmuebleAnuncioCompleto">Exteriores:</string>
    <string name="garajeInmuebleAnuncioCompleto">Garaje:</string>
    <string name="trasteroInmuebleAnuncioCompleto">Trastero:</string>
    <string name="ascensorInmuebleAnuncioCompleto">Ascensor:</string>
    <string name="ultPlantaInmuebleAnuncioCompleto">Ultima planta:</string>
    <string name="mascotasInmuebleAnuncioCompleto">Mascotas:</string>
    <string name="DescripcionDefectoInmuebleAnuncioCompleto">No se ha ingresado Descripcion del inmueble.</string>
    <string name="pisoInmuebleAnuncioCompleto">Piso:</string>
    <string name="precioInmuebleAnuncioCompleto">Precio:</string>
    <string name="tipoAnuncioInmubleAnuncioCompleto">Inmueble en</string>
    <string name="fechaAnunciadoInmuebleAnuncioCompleto">Creacion del anuncio:</string>
    <string name="ultActualizacionAnuncioCompleto">Ultima actualización:</string>
    <string name="DatosAnuncioInmuebleAnuncioCompleto">Datos del Anuncio</string>
    <string name="DatosDelAnuncianteAnuncioCompleto">Datos del Anunciante</string>
    <string name="CorreoAnuncioCompleto">Correo de contacto:</string>
    <string name="telefonoAnuncioCompleto">Telefono/s de contacto:</string>
    <string name="pulseAnuncioCompleto">Pulse aquí</string>
    <!-- String de fragment_mis_anuncios -->
    <string name="btnCrearAnuncio">Crear Anuncio</string>
    <string name="titCrearAnuncio">Crear anuncio</string>
    <!-- String de recyclerView_busqueda -->
    <string name="btnRecyclerAnuncios">Anuncios</string>
    <string name="btnRecyclerFiltros">Filtros</string>
    <!-- String de fragment_filtros_busqueda -->
    <string name="textTiltFiltros">Filtros de busqueda</string>
    <string name="localidadFiltros">Localidad</string>
    <string name="calleFiltros">Calle</string>
    <string name="pisoFiltros">Piso</string>
    <string name="MinMetrosFiltros">Min Metros²</string>
    <string name="MaxMetrosFiltros">Max Metros²</string>
    <string name="numHabFiltros">num Hab</string>
    <string name="minHabFiltros">Min Hab</string>
    <string name="cbComprarFiltros">Comprar</string>
    <string name="cbAlquilarFiltros">Alquilar</string>
    <string name="numBanosFiltros">Num Baños</string>
    <string name="minBanosFiltros">Min Baños</string>
    <string name="tipoEdificacionFiltros">Tipo Edificación</string>
    <string name="tipoObraFiltros">Tipo Obra</string>
    <string name="exterioresFiltros">Exteriores</string>
    <string name="MinPrecioFiltros">Precio minimo</string>
    <string name="MaxPrecioFiltros">Precio maximo</string>
    <string name="introduceEtFiltros">Introduce: </string>
    <string name="btnConfirmarFiltro">Anuncios</string>
    <string name="textSi">Si</string>
    <string name="textNo">No</string>
    <string name="textMeDaIgual">indiferente</string>
</resources>
